ACMS-480: Fix white space to the left of the dropdown button.

--- a/themes/acquia_claro/css/styles.css
+++ b/themes/acquia_claro/css/styles.css
@@ -77,6 +77,10 @@ ul.list-with-striped li:nth-child(odd) {
   background: #d7dde2;
 }
 
+ul.dropbutton {
+  padding-left: 0;
+}
+
 html,
 body {
   font-family: "Proxima Nova", "Open Sans", "Helvetica Neue", sans-serif;
